# limited-searcher

./: docker-compose.yml
api_server/: .env  Cargo.toml
api_server/migrations/2020-02-06-224301_create_users/: up.sql
api_server/migrations/2020-02-08-072351_create_folders/: down.sql  up.sql
api_server/migrations/2020-02-08-073013_create_urls/: down.sql  up.sql
api_server/src/: main.rs  router.rs  schema.rs
api_server/src/folders/: entity.rs  handler.rs  mod.rs  repository.rs  router.rs
api_server/src/urls/: entity.rs  handler.rs  mod.rs  repository.rs  service.rs
api_server/src/users/: entity.rs  handler.rs  mod.rs  repository.rs  router.rs
